--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
     "eslint": "^8.46.0",
+    "git-commit-msg-linter": "^5.0.4",
     "typescript": "^5.1.6"
   }
 }
