--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Este é um desafio para podermos ver suas habilidades como Fullstack Developer.\r Nesse desafio você deverá desenvolver um aplicativo para listar informações da API SpaceX-API.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint ./src/**"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,7 @@
     "@typescript-eslint/parser": "^6.2.0",
     "eslint": "^8.46.0",
     "git-commit-msg-linter": "^5.0.4",
+    "husky": "^8.0.3",
     "typescript": "^5.1.6"
   }
 }
