--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint": "^8.46.0",
     "git-commit-msg-linter": "^5.0.4",
     "husky": "^8.0.3",
+    "lint-staged": "^13.2.3",
     "typescript": "^5.1.6"
   }
 }
