--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint ./src/**",
-    "staged": "lint-staged"
+    "staged": "lint-staged",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +18,10 @@
     "eslint": "^8.46.0",
     "git-commit-msg-linter": "^5.0.4",
     "husky": "^8.0.3",
+    "jest": "^29.6.2",
     "lint-staged": "^13.2.3",
+    "ts-node": "^10.9.1",
+    "tsc": "^2.0.4",
     "typescript": "^5.1.6"
   }
 }
