fiz: arrumar o erro do lint staged não rodar no commit

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "lint": "eslint ./src/**",
     "staged": "lint-staged",
-    "test": "jest"
+    "test": "jest",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +18,7 @@
     "@typescript-eslint/parser": "^6.2.0",
     "eslint": "^8.46.0",
     "git-commit-msg-linter": "^5.0.4",
-    "husky": "^8.0.3",
+    "husky": "^8.0.0",
     "jest": "^29.6.2",
     "lint-staged": "^13.2.3",
     "ts-node": "^10.9.1",
