--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,7 +1,3 @@
 {
-    "src/**/*.ts": [
-        "test",
-        "npm run lint",
-        "npx prettier --write ."
-    ]
+    "src/**/*.ts": ["test", "npm run lint", "npx prettier --write ."]
 }
