--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "lint": "eslint src --ext .ts --fix",
         "staged": "lint-staged",
         "test": "jest",
-        "prepare": "husky install"
+        "prepare": "husky install",
+        "dev": "tsx ./src/server.ts"
     },
     "keywords": [],
     "author": "",
@@ -24,6 +25,11 @@
         "prettier": "^3.0.0",
         "ts-node": "^10.9.1",
         "tsc": "^2.0.4",
+        "tsx": "^3.12.7",
         "typescript": "^5.1.6"
+    },
+    "dependencies": {
+        "@types/express": "^4.17.17",
+        "express": "^4.18.2"
     }
 }
