--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,10 @@
         "target": "ES2019",
         "esModuleInterop": true,
         "allowJs": true,
-        "types": ["jest"]
+        "types": ["jest"],
+        "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
+        "paths": {
+        "@/*": ["./src/*"]
+        },
     }
 }
