--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "jest": "^29.6.2",
         "lint-staged": "^13.2.3",
         "prettier": "^3.0.0",
+        "ts-jest": "^29.1.1",
         "ts-node": "^10.9.1",
         "tsc": "^2.0.4",
         "tsx": "^3.12.7",
