--- a/.github/workflows/CheckUnitsAndVerifyCode.yaml
+++ b/.github/workflows/CheckUnitsAndVerifyCode.yaml
@@ -13,6 +13,7 @@ jobs:
         with:
           node-version: 18
           cache: 'npm'
+      - run: npm ci   
       - run: npm run test
   CheckLint:
     runs-on: ubuntu-latest
@@ -22,4 +23,5 @@ jobs:
         with:
           node-version: 18
           cache: 'npm'
+      - run: npm ci   
       - run: npm run lint   
