--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "dependencies": {
         "@prisma/client": "^5.0.0",
         "@types/express": "^4.17.17",
+        "axios": "^1.4.0",
+        "dotenv": "^16.3.1",
         "express": "^4.18.2"
     }
 }
