--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "test": "jest",
         "prepare": "husky install",
         "dev": "tsx ./src/server.ts",
+        "job:run": "tsx ./src/services/jobs/jobUpdateDatabase.ts",
         "test:integration": "jest --config ./jest.integration.config.ts",
         "reset-db": "prisma migrate reset --force",
         "migrate:run": "prisma migrate deploy"
@@ -39,6 +40,7 @@
         "@types/express": "^4.17.17",
         "axios": "^1.4.0",
         "dotenv": "^16.3.1",
-        "express": "^4.18.2"
+        "express": "^4.18.2",
+        "node-cron": "^3.0.2"
     }
 }
