--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@types/cors": "^2.8.13",
         "@types/jest": "^29.5.3",
         "@types/node": "^20.4.5",
         "@typescript-eslint/eslint-plugin": "^6.2.0",
@@ -40,8 +41,11 @@
         "@prisma/client": "^5.0.0",
         "@types/express": "^4.17.17",
         "axios": "^1.4.0",
+        "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
-        "node-cron": "^3.0.2"
+        "node-cron": "^3.0.2",
+        "swagger-jsdoc": "^6.2.8",
+        "swagger-ui-express": "^5.0.0"
     }
 }
