--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "lint-staged": "^13.2.3",
         "prettier": "^3.0.0",
         "prisma": "^5.0.0",
+        "supertest": "^6.3.3",
         "ts-jest": "^29.1.1",
         "ts-node": "^10.9.1",
         "tsc": "^2.0.4",
