--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,16 +12,16 @@ services:
     networks:
       - spacex_network
       
-  space-x-api:
-    image: amandalfs/space-x-api:16
-    ports:
-      - 8020:8020
-    env_file:
-      - .env
-    depends_on:
-      - db
-    networks:
-      - spacex_network
+  # space-x-api:
+  #   image: amandalfs/space-x-api:16
+  #   ports:
+  #     - 8020:8020
+  #   env_file:
+  #     - .env
+  #   depends_on:
+  #     - db
+  #   networks:
+  #     - spacex_network
 
 networks:
   spacex_network:
