--- a/.github/workflows/CronJobUpdateDatabase.yaml
+++ b/.github/workflows/CronJobUpdateDatabase.yaml
@@ -1,12 +1,12 @@
-name: CronJobUpdateDatabase
-
 on:
     schedule:
-    - cron: "30 10 * * 4"
-    # 15 minutes after the hour on Thursday
+      - cron: "5 * * * *" # a cada 15 minutos  
 jobs:
     update-request:
-        runs-on: ubuntu-latest
-        steps:
+      runs-on: ubuntu-latest
+      steps:
         - name: Update Database
-          run: curl {server_url}/update   
+          env: 
+            SERVER_URL: ${{ secrets.SERVER_URL }}
+          run: curl -X GET "$SERVER_URL/update"
+  
